--- a/style.css
+++ b/style.css
@@ -22,15 +22,15 @@ canvas {
   text-align: center;
 }
 
-.controllers button {
-  background-color: #4CAF50;
-  border: none;
-  
-  padding: 15px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  margin: 4px 2px;
-  cursor: pointer;
+.viewButtons {
+  z-index: 100;
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  top: 0;
+  right: 0
+}
+
+.viewButtons a {
+  margin: 20px;
 }
