--- a/style.css
+++ b/style.css
@@ -13,13 +13,14 @@ canvas {
   justify-content: space-evenly;
   padding: 20px;
   width: 50vw;
-  top: 0;
+  bottom: 0;
   border-radius: 0 0 30px 30px;
   margin-left: auto;
   margin-right: auto;
   left: 0;
   right: 0;
   text-align: center;
+  margin-bottom: 20px;
 }
 
 .viewButtons {
@@ -33,4 +34,11 @@ canvas {
 
 .viewButtons a {
   margin: 20px;
+}
+
+.error {
+  position: absolute;
+  top: 0;
+  display: none;
+  margin: 0 30%
 }
