Max Charge feature added

--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ canvas {
   left: 0;
   right: 0;
   text-align: center;
-  margin-bottom: 20px;
+
 }
 
 .viewButtons {
@@ -36,9 +36,10 @@ canvas {
   margin: 20px;
 }
 
-.error {
+.error,
+.chargeError {
   position: absolute;
   top: 0;
   display: none;
-  margin: 0 30%
+  margin: 0 35%
 }
