distance is done || bugs are fixed

--- a/style.css
+++ b/style.css
@@ -20,7 +20,6 @@ canvas {
   left: 0;
   right: 0;
   text-align: center;
-
 }
 
 .viewButtons {
@@ -29,17 +28,20 @@ canvas {
   display: flex;
   flex-direction: column;
   top: 0;
-  right: 0
+  right: 0;
 }
 
 .viewButtons a {
   margin: 20px;
 }
 
-
 .chargeError {
   position: absolute;
   top: 0;
   display: none;
-  margin: 0 35%
+  margin: 0 35%;
+}
+
+input[type="range"] {
+  border: none;
 }
