--- a/style.css
+++ b/style.css
@@ -8,7 +8,22 @@ canvas {
   width: 100%;
   height: 100%;
 }
+.radius svg
+{
+ 
+  fill: rgba(255, 255, 255, 0.87) !important;
+}
 
+.radius
+{
+  max-width:100px;
+  color:white;
+
+}
+#radius
+{
+  margin-left:20px;
+}
 .controllers {
   position: absolute;
   display: flex;
